nginx-hello/nginx-hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
      - name: hello
        image: invaleed/nginx-hello:latest
        imagePullPolicy: IfNotPresent  
        ports:
        - containerPort: 8081
