nginx-hello/nginx-hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
spec:
  selector:
    app: hello
    tier: web
  ports:
  - port: 8081
    targetPort: 80
  type: ClusterIP
