nginx-hello/nginx-hello-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: hello-ingress
  namespace: default
spec:
  rules:
    - host: example.com
      http:
        paths:
        - path: /hello
          backend:
            serviceName: hello
            servicePort: 8081
